# cantus

./: .gitignore  .pre-commit-config.yaml  .spectra.yaml  .wiki-init.manifest.yaml  .wiki.manifest.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.zhTW.md  MANIFEST.in  MIGRATION_v0.2_to_v0.3.md  MIGRATION_v0.3.3_to_v0.3.4.md  MIGRATION_v0.3.4_to_v0.3.5.md  MIGRATION_v0.3.6_to_v0.4.0.md  MIGRATION_v0.3_to_v0.3.3.md  MIGRATION_v0.4.0_to_v0.4.1.md  MIGRATION_v0.4.1_to_v0.4.2.md  MIGRATION_v0.4.2_to_v0.4.3.md  MIGRATION_v0.4.4_to_v0.4.5.md  MIGRATION_v0.4.5_to_v0.4.6.md  MIGRATION_v0.4.6_to_v0.4.7.md  NOTICE  README.md  README.zhTW.md  SECURITY.md  cantus-manual.html  cantus-roadmap.html  llms.txt  package-lock.json  package.json  pyproject.toml  regen-manifest.yaml
.gemini/commands/spectra/: apply.toml  discuss.toml  drift.toml  ingest.toml  propose.toml
.gemini/skills/spectra-propose/: SKILL.md
.github/workflows/: cross-platform-install.yml  docs.yml  release.yml  repo-hygiene.yml  test.yml
cantus/: __init__.py  __main__.py  cli.py  config.py  inspect.py
cantus/adapters/: __init__.py  _remote_skill.py  anthropic_memory.py  dspy.py  huggingface.py  langchain.py  mcp.py  mcp_client.py  mcp_server.py  openhands.py
cantus/core/: action.py  agent.py  event_stream.py  event_stream_persistence.py  observation.py  registry.py  result.py
cantus/env/: __init__.py  cloud_only.py  colab.py  local.py
cantus/grammar/: tool_call.py
cantus/hooks/: __init__.py
cantus/identity/: __init__.py  soul.py
cantus/model/: bridge.py  chat.py  chat_template.py  factory.py  loader.py
cantus/model/providers/: __init__.py  _common.py  _translate.py  anthropic.py  google.py  groq.py  mlx.py  nvidia.py  ollama.py  omlx.py  openai.py
cantus/protocols/: _common.py  analyzer.py  debug.py  memory.py  memory_auto.py  memory_markdown.py  skill.py  validator.py  workflow.py
cantus/serve/: __init__.py  app.py  channel.py  dashboard.py  introspection.py  security.py
cantus/serve/channels/: __init__.py  _ed25519.py  _errors.py  _googlechat_internals.py  _realtime.py  _signing.py  discord.py  googlechat.py  line.py  telegram.py
cantus/tui/: __init__.py  app.py  client.py  widgets.py
cantus/workflows/: __init__.py  evaluator_optimizer.py  orchestrator_worker.py  parallel.py  prompt_chain.py  router.py
docs/: DOCS_RELEASE_SIGNOFF.md  README.md  cookbook-discord-channel.md  cookbook-google-chat-channel.md  cookbook-line-channel.md  cookbook-telegram-channel.md  llms-txt.md  overview.md  quickstart-desktop.md  quickstart.md  tui.md
docs/api/: overview.md
docs/api/cookbook/: errors.md  tips.md
docs/api/core/: event-stream.md  inspector.md
docs/api/protocols/: debug.md  validator.md
docs/cookbook/: errors.md  patterns.md  tips.md
docs/core/: agent.md  event-stream.md
docs/interactive/data/: knowledge-graph.js  knowledge-graph.json
docs/llm_wiki/: .profile.yaml  index.md  log.md  synthesis.md
docs/llm_wiki/architecture/: arch_1_two_tier_api.md  arch_2_integration_audit.md
docs/llm_wiki/coding_style/: good_taste_linked_list.md  (+2 more)
docs/migrations/: MIGRATION_v0.3.5_to_v0.3.6.md  MIGRATION_v0.3_to_v0.3.1.md  MIGRATION_v0.3_to_v0.3.2.md  MIGRATION_v0.4.3_to_v0.4.4.md  MIGRATION_v0.4.5_to_v0.4.6.md  MIGRATION_v0.4.7_to_v0.5.0.md
docs/protocols/: adapters-batch2.md  adapters-batch3.md  adapters.md  analyzer.md  debug.md  identity.md  memory.md  serve.md  skill.md  validator.md  workflow.md  workflows.md
docs/site/: index.md  overview.md  quickstart-desktop.md  quickstart.md  tui.md
notebooks/: README.md  admin_setup.ipynb  multi_provider_smoke.ipynb  multi_provider_smoke_batch2.ipynb  task_template.ipynb
scripts/: audit_cassettes.sh  check_no_dev_paths.sh  gen_docs_api.mjs  smoke_install.sh  sync_interactive.mjs
tests/: conftest.py  test_action.py  test_agent.py  test_agent_run.py  test_agent_step.py  test_analyzer.py  test_audit_cassettes.py  test_bridge.py  test_chat_protocol.py  test_chat_template.py  test_check_no_dev_paths.py  test_debug.py  test_distribution_config.py  test_error_loop.py  test_event_stream.py  test_event_stream_persistence.py  test_factory.py  test_failure_handling.py  test_hooks.py  test_identity_soul.py  test_inspector.py  test_integration_smoke.py  test_loader.py  test_memory.py  test_memory_auto.py  test_memory_markdown.py  test_no_deprecation_warning.py  test_observation.py  test_public_api.py  test_pyproject_extras_conflicts.py  test_registry.py  test_result.py  test_skill.py  test_tool_call_grammar.py  test_validator.py  test_workflow.py
tests/adapters/: test_adapters_package.py  test_anthropic_memory.py  test_dspy.py  test_huggingface.py  test_langchain.py  test_mcp_client.py  test_mcp_server.py  test_openhands.py  test_remote_skill_base.py  test_skill_spec_for_llm_invariant.py
tests/cli/: fixture_registry.py  test_auth_mode_mapping.py  test_cli_help.py  test_exit_codes.py  test_python_m_equivalence.py  test_registry_import.py  test_serve_args.py  test_settings_precedence.py  test_signal_handling.py
tests/env/: test_environments.py
tests/fixtures/: skill_spec_for_llm_v0_2_1.json  soul_duplicate_rules.md  soul_extra_examples.md  soul_full.md  soul_minimal.md  soul_missing_two.md  soul_wrongcase_name.md
tests/integration/: test_mlx_smoke.py  test_tunnel_smoke.py
tests/providers/: conftest.py  test_anthropic_adapter.py  test_conftest_security.py  test_google_adapter.py  test_groq_adapter.py  test_mlx_adapter.py  test_nvidia_adapter.py  test_ollama_adapter.py  test_ollama_connection_error.py  test_omlx_adapter.py  test_openai_adapter.py  test_translate.py
tests/serve/: test_app.py  test_app_webhook_integration.py  test_arch2_smoke.py  test_channel.py  test_config.py  test_dashboard.py  test_init_exports.py  test_introspection.py  test_lazy_import.py  test_security.py
tests/test_workflows/: test_evaluator_optimizer.py  test_no_registry_mutation.py  test_orchestrator_worker.py  test_parallel.py  test_prompt_chain.py  test_router.py
tests/tui/: test_app.py  test_cli_tui.py  test_client.py
(+277 files in other folders)
