[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cantus"
version = "0.3.3"
description = "Cantus — A polyphonic framework for composing LLM agent harnesses (教學用)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "ECL-2.0" }
authors = [
    { name = "CXPh03n1x", email = "0826@fhsh.tp.edu.tw" }
]
classifiers = [
    "License :: OSI Approved :: Educational Community License, Version 2.0 (ECL-2.0)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Education",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
runtime = [
    "transformers>=4.53.0",
    "bitsandbytes>=0.43.0",
    "accelerate>=0.30.0",
    "torch>=2.1.0",
    "outlines>=0.0.40",
]
memory = [
    "rank-bm25>=0.2.2",
    "sentence-transformers>=2.5.0",
]
# Tier 2 cloud provider adapters — each opt-in to keep import + supply-chain
# surface minimal. v0.2.1 ships OpenAI + Anthropic + Google + Groq directly,
# plus NVIDIA NIM via the OpenAI SDK (no dedicated `nvidia` extras — install
# via `cantus[openai]`). The `providers` aggregator covers the four primary
# adapters. LiteLLM is intentionally NOT a dependency at any layer (2026-03
# 1.82.7/1.82.8 supply-chain incident — see CHANGELOG v0.2.0 Notes).
# The legacy `google-generativeai` SDK is intentionally NOT used; the `google`
# extras pulls in `google-genai` exclusively (the new unified Gemini API SDK).
openai = [
    "openai>=1.50,<2",
]
anthropic = [
    "anthropic>=0.40,<1",
]
google = [
    "google-genai>=0.3,<1",
]
groq = [
    "groq>=0.11,<1",
]
# v0.3.2 — `cantus.adapters.mcp` requires the official Anthropic MCP SDK.
# The range covers both the 0.1.x betas and the 1.x stable line, capped
# below 2 to insulate against a major-version rewrite.
mcp = [
    "mcp>=0.1,<2",
]
# v0.3.3 — cross-framework adapter batch2. Each extras group pins the
# minimum framework SDK release needed by its sibling cantus.adapters
# module; the upper bound caps below the next major version line.
#
# `langchain-core` (not the `langchain` aggregator) — the BaseTool surface
# moved to langchain-core in 0.1.x and is the minimal pin for `cantus[langchain]`.
# `dspy-ai` is the canonical PyPI name for the DSPy framework.
# `transformers>=4.40` is the first release with a stable `transformers.Tool`
# interface; cantus[runtime] already pins a higher floor (>=4.53), so pip
# unification at install time keeps a single resolved version.
# `openhands` (umbrella package, not `openhands-sdk`) bundles the
# `openhands.events.Action` types cantus targets.
langchain = [
    "langchain-core>=0.3,<1",
]
dspy = [
    "dspy-ai>=2.5,<3",
]
huggingface = [
    "transformers>=4.40,<5",
]
openhands = [
    "openhands>=1.16,<2",
]
providers = [
    "cantus[openai,anthropic,google,groq]",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-recording>=0.13",
    "respx>=0.21",
    "mypy>=1.10",
    "ruff>=0.5",
]
all = ["cantus[runtime,memory,providers,dev]"]

[tool.setuptools.packages.find]
where = ["."]
include = ["cantus*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff.lint.per-file-ignores]
# Colab notebooks interleave `%pip install` magics with imports (E402) and
# pre-load names that Cell 3 student templates uncomment later (F401).
"notebooks/*.ipynb" = ["E402", "F401"]
