[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cantus-agent"
version = "0.4.7"
description = "Cantus — A polyphonic framework for composing LLM agent harnesses (教學用)"
readme = "README.md"
requires-python = ">=3.10"
license = "ECL-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "CXPh03n1x", email = "0826@fhsh.tp.edu.tw" }
]
keywords = ["llm", "agent", "framework", "education", "colab", "polyphonic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Education",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/schola-cantorum/cantus"
Documentation = "https://github.com/schola-cantorum/cantus#readme"
Source = "https://github.com/schola-cantorum/cantus"
Issues = "https://github.com/schola-cantorum/cantus/issues"
Changelog = "https://github.com/schola-cantorum/cantus/blob/main/CHANGELOG.md"

[project.scripts]
cantus = "cantus.cli:main"

[project.optional-dependencies]
runtime = [
    "transformers>=4.53.0",
    "bitsandbytes>=0.43.0; sys_platform == 'linux'",
    "accelerate>=0.30.0",
    "torch>=2.1.0",
    "outlines>=0.0.40",
]
memory = [
    "rank-bm25>=0.2.2",
    "sentence-transformers>=2.5.0",
]
# Tier 2 cloud provider adapters — each opt-in to keep import + supply-chain
# surface minimal. v0.2.1 ships OpenAI + Anthropic + Google + Groq directly,
# plus NVIDIA NIM via the OpenAI SDK (no dedicated `nvidia` extras — install
# via `cantus[openai]`). The `providers` aggregator covers the four primary
# adapters. LiteLLM is intentionally NOT a dependency at any layer (2026-03
# 1.82.7/1.82.8 supply-chain incident — see CHANGELOG v0.2.0 Notes).
# The legacy `google-generativeai` SDK is intentionally NOT used; the `google`
# extras pulls in `google-genai` exclusively (the new unified Gemini API SDK).
openai = [
    "openai>=1.50,<2",
]
anthropic = [
    "anthropic>=0.40,<1",
]
google = [
    "google-genai>=0.3,<1",
]
groq = [
    "groq>=0.11,<1",
]
# v0.3.2 — `cantus.adapters.mcp` requires the official Anthropic MCP SDK.
# The range covers both the 0.1.x betas and the 1.x stable line, capped
# below 2 to insulate against a major-version rewrite.
mcp = [
    "mcp>=0.1,<2",
]
# v0.3.3 — cross-framework adapter batch2. Each extras group pins the
# minimum framework SDK release needed by its sibling cantus.adapters
# module; the upper bound caps below the next major version line.
#
# `langchain-core` (not the `langchain` aggregator) — the BaseTool surface
# moved to langchain-core in 0.1.x and is the minimal pin for `cantus[langchain]`.
# `dspy-ai` is the canonical PyPI name for the DSPy framework.
# `transformers>=4.40` is the first release with a stable `transformers.Tool`
# interface; cantus[runtime] already pins a higher floor (>=4.53), so pip
# unification at install time keeps a single resolved version.
# `openhands` (umbrella package, not `openhands-sdk`) bundles the
# `openhands.events.Action` types cantus targets.
langchain = [
    "langchain-core>=0.3,<1",
]
dspy = [
    "dspy-ai>=2.5,<3",
]
huggingface = [
    "transformers>=4.40,<5",
]
openhands = [
    # openhands>=1.16.0 only publishes wheels for python >=3.12,<3.13. The
    # marker scopes this dependency to that interpreter window so universal
    # uv resolution succeeds on the wider `requires-python = ">=3.10"`
    # surface (py3.10 / 3.11 / 3.13 see an empty extras group rather than an
    # unsatisfiable requirement). Users on those interpreters who want the
    # openhands adapter must upgrade their interpreter to 3.12 first; the
    # cantus.adapters.openhands lazy-import gate emits a clear ImportError
    # if the SDK is missing at runtime.
    "openhands>=1.16,<2; python_version >= '3.12' and python_version < '3.13'",
]
# v0.4.0 — `cantus.serve` / `cantus.config` framework entrypoint. Pulls
# the FastAPI web framework, the Uvicorn ASGI server, and the
# pydantic-settings BaseSettings package (pydantic 2.x sibling) so that
# `cantus.serve(registry)` can expose Skill endpoints + Swagger UI and
# `cantus.config.Settings` can read `CANTUS_SERVE_*` env variables.
serve = [
    "fastapi>=0.115,<1",
    "uvicorn>=0.30,<1",
    "pydantic-settings>=2.4,<3",
    # v0.4.5 cantus-channel-gateway-webhook — outbound reply HTTP client
    # shared by webhook channels (LINE Messaging API / Telegram Bot API).
    "httpx>=0.27,<1",
    # v0.4.6 cantus-channel-gateway-realtime — Ed25519 interaction
    # signature verification (PyNaCl is the first C-extension dependency
    # in cantus[serve]; prebuilt wheels cover Linux x86_64, macOS arm64
    # + x86_64, and Windows AMD64 for CPython 3.10–3.13) plus the pure
    # Python WebSocket client for the Discord Gateway connection.
    "pynacl>=1.5,<2",
    # Unbounded upper to let uv pick a websockets version compatible with
    # whichever provider extras are in the resolution split: `cantus[all]`
    # pulls google-genai<=0.8.0 which pins websockets<15; `cantus[openhands]`
    # pulls openhands-sdk→fastmcp which pins websockets>=15. Both splits are
    # already separated by [tool.uv].conflicts (all ↔ openhands), so no new
    # conflict entry is needed; each split resolves to a websockets version
    # satisfying its own provider constraint.
    "websockets>=13",
    # v0.4.7 cantus-channel-gateway-pubsub — Google Chat over Cloud Pub/Sub
    # streaming pull (inbound) plus OAuth2 service-account access token
    # minting via the transitively-pulled google-auth (NOT pinned explicitly).
    # The package and its transitive grpcio dependency ship prebuilt wheels
    # for Linux x86_64 (manylinux2014), macOS arm64 + x86_64, and Windows
    # AMD64 across CPython 3.10-3.13 — same matrix as the v0.4.6 PyNaCl pin,
    # so `pip install cantus-agent[serve]` keeps its "no source builds"
    # property on every supported install target.
    "google-cloud-pubsub>=2.20,<3",
]
# v0.4.1 cantus-serve-security — documentary alias for the security
# surface (auth gate + SecretStr token handling). Resolves to the same
# dependency closure as `cantus[serve]` (no new third-party packages,
# no new [tool.uv] conflicts entries); downstream code may write
# `pip install cantus[security]` to communicate intent. The auth gate
# code lives in `cantus.serve.security` and uses only stdlib (`hmac`,
# `enum`) plus pydantic's `SecretStr` (already required by serve).
security = [
    "cantus-agent[serve]",
]
# v0.4.4 cantus-local-llm-and-desktop-walkthrough — documentary alias
# for the Ollama local LLM path. The local Ollama daemon exposes an
# OpenAI-compatible endpoint, so `OllamaChatModel` runs on the openai
# SDK (same pattern as `NvidiaChatModel`). The `ollama` extras key
# resolves to the same closure as `cantus[openai]` — no new third-party
# packages, no new [tool.uv] conflicts entries; downstream code may
# write `pip install cantus[ollama]` to communicate intent.
ollama = [
    "cantus-agent[openai]",
]
providers = [
    "cantus-agent[openai,anthropic,google,groq]",
]
# v0.4.8 cantus-serve-tui-mvp — the `cantus tui` terminal dashboard client.
# Textual (built on Rich) renders the four-pane layout; httpx is the HTTP
# client used to poll the read-only /introspection + /health endpoints.
# httpx is already pinned by `cantus[serve]`, but the TUI is a standalone
# client that may be installed without the server stack, so the `tui` extra
# carries its own httpx pin. Textual ships pure-Python wheels (no C build),
# so this extra keeps the "no source builds" install property on every
# supported target. No new [tool.uv] conflicts entry is needed: neither
# Textual nor httpx participates in the websockets resolution split.
tui = [
    "textual>=8,<9",
    "httpx>=0.27,<1",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-recording>=0.13",
    "respx>=0.21",
    "mypy>=1.10",
    "ruff>=0.5",
]
all = ["cantus-agent[runtime,memory,providers,dev]"]

[tool.setuptools.packages.find]
where = ["."]
include = ["cantus*"]

# PEP 561: ship the `py.typed` marker inside the cantus wheel so downstream
# consumers with strict type checking can see cantus' inline annotations
# instead of treating every cantus import as `Any`. Added in v0.3.5
# (cantus-quality-baseline). Keep this entry in sync if additional package-
# data files are introduced later.
[tool.setuptools.package-data]
cantus = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# v0.3.5 (cantus-quality-baseline): pytest emits a terminal `coverage`
# section and a `coverage.xml` artifact on every default invocation; no
# `fail_under` threshold yet — we collect baseline data first.
addopts = "-v --tb=short --cov=cantus --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
source = ["cantus"]
branch = true
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

# v0.4.0 mypy strict baseline. Promoted from `disallow_untyped_defs = false`
# (v0.3.5 baseline) to `strict = true`: cantus public surface must satisfy
# strict-mode semantics so downstream `mypy --strict` consumers see precise
# types instead of `Any`-leaking signatures. The v0.3.5 baseline kept the
# coverage / pytest plumbing and override block identical; only the strict
# flag flipped (see cantus-distribution `Cantus ships PEP 561 py.typed
# marker and strict typing configuration` Requirement).
[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
strict = true

[[tool.mypy.overrides]]
module = [
    "mcp.*",
    "langchain_core.*",
    "dspy.*",
    "transformers.*",
    "openhands.*",
    "anthropic.*",
    "openai.*",
    "google.genai.*",
    # v0.4.7 cantus-channel-gateway-pubsub — google-cloud-pubsub and
    # google-auth do not ship py.typed markers (as of 2.20 / 2.40 lines),
    # so strict mypy treats their imports as untyped without these
    # overrides. The same pattern was applied to google.genai in v0.4.0.
    "google.cloud.*",
    "google.oauth2.*",
    "google.auth.*",
    "groq.*",
    "fastapi.*",
    "uvicorn.*",
    "pydantic_settings.*",
]
ignore_missing_imports = true

# v0.4.0 — uv-specific extras conflict declaration. The `cantus[google]`
# extras pulls google-genai (transitive `websockets>=13.0,<15.0.dev0`),
# while `cantus[openhands]` pulls openhands → openhands-sdk → fastmcp
# (transitive `websockets>=15.0.1`). The two transitive constraints are
# unsatisfiable together. The `cantus-distribution` capability
# `pyproject declares uv-style extras conflicts for known incompatible groups`
# Requirement names `[all]` and `[openhands]` as the minimum cluster; we
# additionally name the underlying `[google]` extras and the `[providers]`
# aggregator (which transitively pulls `[google]`) so a fresh `uv sync` on
# a freshly cloned cantus checkout — i.e. the onboarding path — resolves
# without emitting any "cantus[…] and cantus[openhands] are incompatible"
# error variant. Each extras group remains individually installable. pip
# does not perform universal resolution and ignores the `[tool.uv]` table,
# so pip consumers are unaffected.
[tool.uv]
conflicts = [
    [{ extra = "all" }, { extra = "openhands" }],
    [{ extra = "providers" }, { extra = "openhands" }],
    [{ extra = "openai" }, { extra = "openhands" }],
    [{ extra = "anthropic" }, { extra = "openhands" }],
    [{ extra = "google" }, { extra = "openhands" }],
    [{ extra = "groq" }, { extra = "openhands" }],
    # `ollama` is a documentary alias for `openai` (the local Ollama daemon
    # exposes an OpenAI-compatible endpoint), so it inherits the same
    # transitive openai>=1.50,<2 pin and the same incompatibility with the
    # `openhands` extras (whose transitive litellm pulls openai>=2.20.0).
    # uv does not auto-propagate alias-target conflicts, so this entry is
    # required for `uv sync` universal resolution to succeed.
    [{ extra = "ollama" }, { extra = "openhands" }],
]

[tool.ruff.lint.per-file-ignores]
# Colab notebooks interleave `%pip install` magics with imports (E402) and
# pre-load names that Cell 3 student templates uncomment later (F401).
"notebooks/*.ipynb" = ["E402", "F401"]
